# airflow_test

./: .gitignore  requirements.txt
config/: dag_manager.json
plugins/: dag_manager_plugin.py
plugins/dag-manager-airflow-plugin/: ARCHITECTURE.md  README.md  pyproject.toml
plugins/dag-manager-airflow-plugin/src/dag_manager/: __init__.py  airflow_connections.py  app.py  cli.py  config.py  db.py  github_client.py  models.py  renderer.py  service.py
plugins/dag-manager-airflow-plugin/src/dag_manager/sql/: 001_init.sql
plugins/dag-manager-airflow-plugin/src/dag_manager/static/: dag_manager.css  dag_manager.js
plugins/dag-manager-airflow-plugin/src/dag_manager/templates/s3_to_s3_dag_template/: dag_template_file.jinja
plugins/dag-manager-airflow-plugin/src/dag_manager/templates/smb_to_s3_dag_template/: dag_template_file.jinja
plugins/dag-manager-airflow-plugin/src/dag_manager/ui_templates/: base.html  dag_form.html  error.html  index.html
plugins/dag_manager/: airflow_connections.py  app.py  config.py  github_client.py  plugin.py  service.py  template_catalog.py
plugins/dag_manager/static/: dag_manager.css  dag_manager.js
plugins/dag_manager/ui_templates/: base.html  dag_form.html  index.html
templates/s3_to_s3_dag_template/: template_variables.json
templates/smb_to_s3_dag_template/: template_variables.json
